tests/test_assets/semantic/invalid/builtins/wrapping_known_zero_divisor.cog
test::(value: i32) -> void {
    value / wrapping_sub(
        cast(i32, 1),
        cast(i32, 1)
    );
}
