tests/test_assets/semantic/invalid/builtins/wrapping_known_zero_divisor.expected
semantic error at line 2: division by zero
1 semantic error generated.
